--- a/source/Views/DetailsViewGameOverview.xaml
+++ b/source/Views/DetailsViewGameOverview.xaml
@@ -463,7 +463,7 @@
                                                     </Style>
                                                 </StackPanel.Style>
                                                 <Label Content="{DynamicResource LOCGenreLabel}" Style="{DynamicResource FeedSectionLabel}"/>
-                                                <Grid Margin="0,10,0,10" Grid.Row="2" Background="{DynamicResource  LinksContainerBackgroundBrush}" MinHeight="45">
+                                                <Grid Margin="0,0,0,10" Grid.Row="2" Background="{DynamicResource  LinksContainerBackgroundBrush}" MinHeight="45">
                                                     <Grid.RowDefinitions>
                                                         <RowDefinition Height="Auto" />
                                                     </Grid.RowDefinitions>
@@ -498,7 +498,7 @@
                                                     </Style>
                                                 </StackPanel.Style>
                                                 <Label Content="{DynamicResource LOCGameCategoriesTitle}" Style="{DynamicResource FeedSectionLabel}" />
-                                                <Grid Margin="0,10,0,10" Grid.Row="2" Background="{DynamicResource  LinksContainerBackgroundBrush}" MinHeight="45">
+                                                <Grid Margin="0,0,0,10" Grid.Row="2" Background="{DynamicResource  LinksContainerBackgroundBrush}" MinHeight="45">
                                                     <Grid.RowDefinitions>
                                                         <RowDefinition Height="Auto" />
                                                     </Grid.RowDefinitions>
@@ -530,7 +530,7 @@
                                                     </Style>
                                                 </StackPanel.Style>
                                                 <Label Content="{DynamicResource LOCFeaturesLabel}" Style="{DynamicResource FeedSectionLabel}" />
-                                                <Grid Margin="0,10,0,10" Grid.Row="2" Background="{DynamicResource  LinksContainerBackgroundBrush}" MinHeight="45">
+                                                <Grid Margin="0,0,0,10" Grid.Row="2" Background="{DynamicResource  LinksContainerBackgroundBrush}" MinHeight="45">
                                                     <Grid.RowDefinitions>
                                                         <RowDefinition Height="Auto" />
                                                     </Grid.RowDefinitions>
@@ -562,7 +562,7 @@
                                                     </Style>
                                                 </StackPanel.Style>
                                                 <Label Content="{DynamicResource LOCTagsLabel}" Style="{DynamicResource FeedSectionLabel}" />
-                                                <Grid Margin="0,10,0,10" Grid.Row="2" Background="{DynamicResource  LinksContainerBackgroundBrush}" MinHeight="45">
+                                                <Grid Margin="0,0,0,10" Grid.Row="2" Background="{DynamicResource  LinksContainerBackgroundBrush}" MinHeight="45">
                                                     <Grid.RowDefinitions>
                                                         <RowDefinition Height="Auto" />
                                                     </Grid.RowDefinitions>
@@ -585,10 +585,23 @@
                                         </StackPanel>
 
                                         <StackPanel Grid.Column="2" >
-                                            <Border 
-                                                Background="{DynamicResource SectionContainerBackgroundBrush}" Height="200">
-                                                <Border Style="{DynamicResource OutlineBorder}" />
-                                            </Border>
+                                            
+                                            <StackPanel>
+                                                <Label Content="{DynamicResource LOCSuccessStoryAchievements}" Style="{DynamicResource FeedSectionLabel}"/>
+                                                <Grid>
+                                                    <Border Background="{DynamicResource SectionContainerBackgroundBrush}" />
+                                                    <Border Style="{DynamicResource OutlineBorder}" />
+                                                    <Border Padding="5,10,5,10" >
+                                                        <StackPanel>
+                                                            <ContentControl x:Name="SuccessStory_PluginProgressBar" Width="400" Height="20" Margin="0,0,0,10"/>
+                                                            <ContentControl x:Name="SuccessStory_PluginCompactUnlocked" />
+                                                            <ContentControl x:Name="SuccessStory_PluginCompactLocked" />
+                                                            <ContentControl x:Name="SuccessStory_PluginButton" HorizontalAlignment="Right"/>
+                                                        </StackPanel>
+                                                    </Border>
+                                                </Grid>
+                                            </StackPanel>
+
                                         </StackPanel>
                                     </Grid>
 
@@ -630,6 +643,7 @@
         <Setter Property="FontFamily" Value="Corbel"/>
         <Setter Property="Typography.Capitals" Value="AllSmallCaps"/>
         <Setter Property="Foreground" Value="#94a1a6"/>
+        <Setter Property="Margin" Value="0,0,0,10" />
     </Style>
 
     <Style TargetType="Border" x:Key="OutlineBorder">
