--- a/source/Views/DetailsViewGameOverview.xaml
+++ b/source/Views/DetailsViewGameOverview.xaml
@@ -448,7 +448,7 @@
                                             <ColumnDefinition Width="*" />
                                             <ColumnDefinition Width="400" />
                                         </Grid.ColumnDefinitions>
-                                        
+
                                         <StackPanel Grid.Column="0" Margin="0,0,40,0">
 
                                             <StackPanel Name="PART_ElemGenres">
@@ -581,30 +581,56 @@
                                                     </ItemsControl>
                                                 </Grid>
                                             </StackPanel>
-                                            
+
                                         </StackPanel>
 
-                                        <StackPanel Grid.Column="2" >
+                                        <StackPanel Grid.Column="1" >
+                                            <StackPanel Name="HltbPanel" Margin="0,0,0,15">
+                                                <Label Content="HowLongToBeat" Style="{DynamicResource FeedSectionLabel}"/>
+                                                <Border Background="{DynamicResource SectionContainerBackgroundBrush}" />
+                                                <Border Style="{DynamicResource OutlineBorder}" />
+                                                <Border Padding="10" >
+                                                    <StackPanel>
+                                                        <ContentControl x:Name="HowLongToBeat_PluginProgressBar" Width="380" HorizontalAlignment="Left"/>
+                                                    </StackPanel>
+                                                </Border>
+                                            </StackPanel>
                                             
-                                            <StackPanel>
+                                            <StackPanel Name="SuccessStoryPanel" Margin="0,0,0,15">
                                                 <Label Content="{DynamicResource LOCSuccessStoryAchievements}" Style="{DynamicResource FeedSectionLabel}"/>
                                                 <Grid>
                                                     <Border Background="{DynamicResource SectionContainerBackgroundBrush}" />
                                                     <Border Style="{DynamicResource OutlineBorder}" />
-                                                    <Border Padding="5,10,5,10" >
+                                                    <Border Padding="10" >
                                                         <StackPanel>
-                                                            <ContentControl x:Name="SuccessStory_PluginProgressBar" Width="400" Height="20" Margin="0,0,0,10"/>
+                                                            <ContentControl x:Name="SuccessStory_PluginProgressBar"  Height="20" Margin="0,0,0,10"/>
                                                             <ContentControl x:Name="SuccessStory_PluginCompactUnlocked" />
-                                                            <ContentControl x:Name="SuccessStory_PluginCompactLocked" />
+                                                            <ContentControl x:Name="SuccessStory_PluginCompactLocked" Margin="0,0,0,10"/>
                                                             <ContentControl x:Name="SuccessStory_PluginButton" HorizontalAlignment="Right"/>
                                                         </StackPanel>
                                                     </Border>
                                                 </Grid>
                                             </StackPanel>
 
+                                            <StackPanel Name="ScreenshotsVisualizerPanel" Margin="0,0,0,15">
+                                                <Label Content="{DynamicResource LOCSsvTitle}" Style="{DynamicResource FeedSectionLabel}"/>
+                                                <Grid>
+                                                    <Border Background="{DynamicResource SectionContainerBackgroundBrush}" />
+                                                    <Border Style="{DynamicResource OutlineBorder}" />
+                                                    <Border Padding="10" >
+                                                        <StackPanel>
+                                                            <ContentControl x:Name="ScreenshotsVisualizer_PluginSinglePicture" Margin="0,0,0,10"/>
+                                                            <ContentControl x:Name="ScreenshotsVisualizer_PluginListScreenshotsVertical" Margin="0,0,0,10" MinHeight="300"/>
+                                                            <Button Name="PART_CustomSsvButton" HorizontalAlignment="Right">
+                                                                <ContentControl x:Name="ScreenshotsVisualizer_PluginViewItem" />
+                                                            </Button>
+                                                        </StackPanel>
+                                                    </Border>
+                                                </Grid>
+                                            </StackPanel>
+                                            
                                         </StackPanel>
                                     </Grid>
-
                                 </Grid>
                             </Grid>
                         </Grid>
